--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-  <h1>Welcome to your local app</h1>
-  <script src="./js/index.js"></script>
+  <h1>Welcome to your local app from hbs</h1>
 </body>
+
 </html>
