make index.hbs dynamic

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <h1>Welcome to your local app from hbs</h1>
+  <h1>Welcome to your local {{title}}</h1>
+  <p>Created by {{name}} </p>
 </body>
 
 </html>
