--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,8 @@
   <title>About Weather App</title>
 </head>
 <body>
-  <h1>About Weather App</h1>
+  <h1>{{title}}</h1>
   <img src="./assets/robot.jpg" alt="robot image">
+  <p>Created by {{name}} </p>
 </body>
 </html>
