set up footer partial and tweak a few changes to about, help and about pages

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,8 @@
   <title>About Weather App</title>
 </head>
 <body>
-  <h1>{{title}}</h1>
+  {{>header}}
   <img src="./assets/robot.jpg" alt="robot image">
-  <p>Created by {{name}} </p>
+  {{>footer}}  
 </body>
 </html>
