handle dynamic 404 handling and makeing common css file   -- add common.css for common css files between pages like header and footer   -- add help 404 not found route   -- samll tweak in header container   -- make 404 page dynamic   - fixed href route in about, help and index files

--- a/public/css/404.css
+++ b/public/css/404.css
@@ -47,6 +47,7 @@ a {
   -webkit-animation: pulseColor 1000ms linear 3100ms forwards;
   animation: pulseColor 1000ms linear 3100ms forwards;
   font-weight: 500;
+  text-decoration: none;
 }
 
 a:hover b,
