--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,5 @@
-<h1>{{title}}</h1>
-<div>
+<div class="header">
+  <h1>{{title}}</h1>
   <a href="/">Weather</a>
   <a href="/about">About</a>
   <a href="/help">Help</a>
