style app   -- change robot picture   -- add webpage weather icon on all pages   -- modify 404 page links   -- modify about, help, and index  pages styles   -- modify common css file   -- change the title of the home page   -- add div containers in footer, header, about, help, and index pages

--- a/public/css/404.css
+++ b/public/css/404.css
@@ -41,7 +41,7 @@ body {
   background: none;
 }
 
-a {
+main a {
   display: block;
   cursor: pointer;
   -webkit-animation: pulseColor 1000ms linear 3100ms forwards;
@@ -52,6 +52,19 @@ a {
 
 a:hover b,
 a:focus b {
+  color: #F04F54;
+}
+.header-links {
+  display: flex;
+  flex-direction: column;
+}
+.header-links a {
+  padding: .5rem 2rem 0 0;
+  font-weight: 800;
+  text-decoration: none;
+  color: white;
+}
+.header-links a:hover {
   color: #F04F54;
 }
 
