--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="/assets/sunny.png">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/about.css">
   <title>About Weather App</title>
 </head>
 <body>
-  {{>header}}
-  <img src="./assets/robot.jpg" alt="robot image">
+  <div class="main-content">
+    {{>header}}
+    <img src="/assets/robot.png" alt="robot image">
+  </div>
   {{>footer}}  
 </body>
 </html>
