--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,12 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/assets/sunny.png">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
-  {{>header}}
+  <div class="main-content">
+    {{>header}}
+    <p>Just search for your location and find the most accurate forecast</p>
+  </div>
   {{>footer}}
 </body>
 
