--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,11 +1,51 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  color: #333333;
+  margin: 0 1rem;
+  border: green 1px solid;
+  height: 100vh;
+}
+
 a {
   text-decoration: none;
+  color: #888888;
+  font-size: 1.3rem;
+  margin: .5rem 1rem;
 }
-.header a:hover {
+
+.main-content {
+  border: 3px solid black;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.header {
+  border: 1px red solid;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.header a:hover,
+.header a:focus {
   color: #F04F54;
   text-decoration: none;
 }
 
-.header {
-  /* background: grey; */
+.header h1{
+  font-size: 4rem;
+  text-align: center;
+}
+
+.header-links {
+ margin: 0 auto;
+}
+
+.footer {
+  border-top: 1px solid #eeeeee;
+  color: #888888;
 }
