--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,8 @@
 <div class="header">
   <h1>{{title}}</h1>
-  <a href="/">Weather</a>
-  <a href="/about">About</a>
-  <a href="/help">Help</a>
+  <div class="header-links">
+    <a href="/">Weather</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
+  </div>
 </div>
