--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="/assets/sunny.png">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/help.css">
   <title>Help</title>
 </head>
 <body>
-  {{>header}}
-  <p>{{message}}</p>
+  <div class="main-content">
+    {{>header}}
+    <p>{{message}}</p>
+  </div>
   {{>footer}}
 </body>
 </html>
