add search form and fetch the data from our node api

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,8 +15,14 @@
   <div class="main-content">
     {{>header}}
     <p>Just search for your location and find the most accurate forecast</p>
+    <form>
+      <input type="text" placeholder="Address">
+      <button>Search</button>
+    </form>
+
   </div>
   {{>footer}}
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
