show received data from our API to user

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,7 +19,8 @@
       <input type="text" placeholder="Address">
       <button>Search</button>
     </form>
-
+    <p id="message-1" ></p>
+    <p id="message-2" ></p>
   </div>
   {{>footer}}
   <script src="/js/index.js"></script>
