--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,27 @@
 
 .main-content p {
-  border: 1px pink solid;
+  /* border: 1px pink solid; */
   text-align: center;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+input {
+  padding: 0.5rem;
+  border: 1px solid #e66969;
+  font-size: 1rem;
+  margin: 0 1rem 0 0;
+  border-radius: 5px;
+}
+button {
+  font-size: 1.1rem;
+  padding: .5rem;
+  background: #e66969;
+  color: #740000;
+  border: unset;
+  border-radius: 6.7px;
 }
