--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/assets/sunny.png">
+  <link rel="icon" href="/assets/clear-day.png">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/index.css">
 </head>
@@ -19,8 +19,13 @@
       <input type="text" placeholder="Address">
       <button>Search</button>
     </form>
-    <p id="message-1" ></p>
-    <p id="message-2" ></p>
+    <div class="forecast-container">
+      <img src="/assets/weather.png" id="weather_icon" alt="sunny">
+      <div class="forcast-text">
+        <p id="message-1" ></p>
+        <p id="message-2" ></p>
+      </div>
+    </div>
   </div>
   {{>footer}}
   <script src="/js/index.js"></script>
