--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,5 @@
 <div class="footer">
-  <p>Created by {{name}} </p>
+  <a href="https://mhemati.com/">
+    <p>Created by {{name}} </p>
+  </a>
 </div>
