--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -13,6 +13,20 @@
   <div class="main-content">
     {{>header}}
     <p>{{message}}</p>
+    <p>
+      This app is using Darksky and Mapbox APIs to get your location latitude and longitude and provide 
+      the most possible accurate weather. 
+    </p>
+    <h3>Search Tips</h3>
+    <p>you can serach by: </p>
+    <ul>
+      <li>City name</li>
+      <li>Postal code or Zip code</li>
+    </ul>
+    <p>
+      If you are searching for a location that is not your location, try to make it more specific like the city name
+      and country.
+    </p>
   </div>
   {{>footer}}
 </body>
