--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,6 +27,7 @@ button {
   color: #740000;
   border: unset;
   border-radius: 6.7px;
+  outline-color: red;
 }
 
 #weather_icon {
@@ -37,6 +38,7 @@ button {
 
 .forecast-container {
   display: flex;
+  justify-content: center;
 }
 
 .forcast-text {
