--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,10 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>
+      This is me. A human Robot. I'm just kidding. I am a full-stack web developer which you can find more
+      about me in my <a href="https://mhemati.com/">Portfolio</a>.
+    </p>
     <img src="/assets/robot.png" alt="robot image">
   </div>
   {{>footer}}  
