remove border around body

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -4,7 +4,7 @@ body {
   flex-direction: column;
   color: #333333;
   margin: 0 1rem;
-  border: green 1px solid;
+  /* border: green 1px solid; */
   height: 100vh;
 }
 
