--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,7 +7,7 @@
   <link rel="icon" href="/assets/sunny.png">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/help.css">
-  <title>Help</title>
+  <title>Search Tips</title>
 </head>
 <body>
   <div class="main-content">
