makes changes to index.css and index.css and remove icons for a new front end design

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,29 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/assets/clear-day.png">
-  <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
   <div class="main-content">
-    {{>header}}
-    <p>Just search for your location and find the most accurate forecast</p>
-    <form>
-      <input type="text" placeholder="Address">
-      <button>Search</button>
-    </form>
-    <div class="forecast-container">
-      <img src="/assets/weather.png" id="weather_icon" alt="sunny">
-      <div class="forcast-text">
-        <p id="message-1" ></p>
-        <p id="message-2" ></p>
-        <p id="message-3"></p>
-      </div>
-    </div>
-  </div>
-  {{>footer}}
+  {{!-- {{>header}} --}}
+    
+  {{!-- {{>footer}} --}}
   <script src="/js/index.js"></script>
 </body>
 
