add HTML skeleton for new design

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,108 @@
 <body>
   <div class="main-content">
   {{!-- {{>header}} --}}
-    
+    <div class="background-mask">
+      <div class="background">
+        <div class="content">
+          <div class="top-main-display">
+            <div class="top-left-display">
+              <div class="top-left-display-icon"></div>
+              <div class="top-left-display-weather">Sunny</div>
+              <div class="top-left-display-city">City Name</div>
+              <div class="top-left-display-temp">28°C</div>
+            </div>
+            <div class="search-display">
+              <input type="text" class="search-box" placeholder="Search for Your City">
+            </div>
+            <div class="top-right-display">
+              <div class="top-left-tile">
+                <div class="condition">Humidity</div>
+                <div class="sub-condition">
+                  <div class="sub-condition-icon1 sub-condition-icon"></div>
+                  <div class="sub-condition-value">50 %</div>
+                </div>
+              </div>
+              <div class="top-right-tile">
+                <div class="condition">Chance of Rain</div>
+                <div class="sub-condition">
+                  <div class="sub-condition-icon2 sub-condition-icon"></div>
+                  <div class="sub-condition-value">28 %</div>
+                </div>
+              </div>
+              <div class="bottom-left-tile">
+                <div class="condition">Wind Speed</div>
+                <div class="sub-condition">
+                  <div class="sub-condition-icon3 sub-condition-icon"></div>
+                  <div class="sub-condition-value">20 km/h</div>
+                </div>
+              </div>
+              <div class="bottom-left-tile">
+                <div class="condition">Air Pressure</div>
+                <div class="sub-condition">
+                  <div class="sub-condition-icon4 sub-condition-icon"></div>
+                  <div class="sub-condition-value">500 PS</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="days-display">
+            <a href="#" class="days-display-left-arrow"></a>
+            <div class="days-display-previous-day">Saturday</div>
+            <div class="days-display-next-day">Monday</div>
+            <a href="#" class="days-display-right-arrow"></a>
+          </div>
+          <div class="hours-display">
+            <div class="hours-display-navigation">
+              <a href="#" class="hours-display-left-arrow"></a>
+              <a href="#" class="hours-display-right-arrow"></a>
+            </div>
+            <div class="hourly-tiles">
+              <div class="hourly-tile">
+                <div class="hour">1 A.M.</div>
+                <div class="hourly-tile-temp">28 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">2 A.M.</div>
+                <div class="hourly-tile-temp">28 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">3 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">4 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">5 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">6 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">7 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+              <div class="hourly-tile">
+                <div class="hour">8 A.M.</div>
+                <div class="hourly-tile-temp">28.5 °C</div>
+                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   {{!-- {{>footer}} --}}
   <script src="/js/index.js"></script>
 </body>
