add new styles to top left display

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -45,3 +45,42 @@ html {
   border-radius: 21px;
   padding: .5rem 2rem;
 }
+/********************************************************************* Top Display ***********/
+.top-main-display {
+  /* border: 1px solid yellow; */
+  flex-grow: 6;
+  display: flex;
+}
+
+/* ---------- Top Left Display ------------ */
+.top-left-display {
+  /* border: 1px solid white; */
+  color: white;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.top-left-display-icon {
+  background: url(../assets/Cloud.svg) no-repeat top left;
+  background-size: contain;
+  width: 70%;
+  height: 50%;
+}
+
+.top-left-display-weather {
+  padding: 0 0 0 1rem;
+  font-weight: 800;
+  font-size: 2rem;
+}
+
+.top-left-display-city {
+  padding: .5rem 0 0 1rem;
+  font-weight: 300;
+}
+
+.top-left-display-temp {
+  padding: .5rem 0 0 1rem;
+  font-size: 2rem;
+}
