modify index.css and index.hbs to javascript   -- add a new field to show summary and errors coming back from server   --  clear index.js to apply new codes for new design   -- make changes to weather.js request to send the whole data   -- add new form for search and new ids to support js file

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,40 +18,43 @@
           <div class="top-main-display">
             <div class="top-left-display">
               <div class="top-left-display-icon"></div>
-              <div class="top-left-display-weather">Sunny</div>
+              <div class="top-left-display-weather">---</div>
               <div class="top-left-display-city">City Name</div>
               <div class="top-left-display-temp">28°C</div>
             </div>
             <div class="search-display">
-              <input type="text" class="search-box" placeholder="Search for Your City">
+              <form>
+                <input type="text" class="search-box" placeholder="Search for Your City">
+              </form>
+              <div id="summary-display"></div>
             </div>
             <div class="top-right-display">
               <div class="top-left-tile">
                 <div class="condition">Humidity</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon1 sub-condition-icon"></div>
-                  <div class="sub-condition-value">50 %</div>
+                  <div id="sub-condition-value1" class="sub-condition-value">50 %</div>
                 </div>
               </div>
               <div class="top-right-tile">
                 <div class="condition">Chance of Rain</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon2 sub-condition-icon"></div>
-                  <div class="sub-condition-value">28 %</div>
+                  <div id="sub-condition-value2" class="sub-condition-value">28 %</div>
                 </div>
               </div>
               <div class="bottom-left-tile">
                 <div class="condition">Wind Speed</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon3 sub-condition-icon"></div>
-                  <div class="sub-condition-value">20 km/h</div>
+                  <div id="sub-condition-value3" class="sub-condition-value">20 km/h</div>
                 </div>
               </div>
               <div class="bottom-left-tile">
                 <div class="condition">Air Pressure</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon4 sub-condition-icon"></div>
-                  <div class="sub-condition-value">500 PS</div>
+                  <div id="sub-condition-value4" class="sub-condition-value">500 PS</div>
                 </div>
               </div>
             </div>
