--- a/public/css/index.css
+++ b/public/css/index.css
@@ -89,6 +89,8 @@ html {
 .search-display {
   /* border: 1px solid purple; */
   width: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .search-box {
@@ -101,6 +103,13 @@ html {
   color: white;
   padding: 5px 5px 5px 14px;
   font-size: 1rem;
+}
+
+#summary-display {
+  color: #ca9b6e;
+  font-weight: 200;
+  font-size: 2rem;
+  margin: 2rem 0 0 2rem; 
 }
 
 input {
