add new SVG icons and adding data to left display

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -64,7 +64,7 @@ html {
 }
 
 .top-left-display-icon {
-  background: url(../assets/Cloud.svg) no-repeat top left;
+  /* background: url(../assets/Cloud.svg) no-repeat top left; */
   background-size: contain;
   width: 70%;
   height: 50%;
