--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,9 +18,9 @@
           <div class="top-main-display">
             <div class="top-left-display">
               <div class="top-left-display-icon"></div>
-              <div class="top-left-display-weather">---</div>
-              <div class="top-left-display-city">City Name</div>
-              <div class="top-left-display-temp">28°C</div>
+              <div class="top-left-display-weather"></div>
+              <div class="top-left-display-city"></div>
+              <div class="top-left-display-temp"></div>
             </div>
             <div class="search-display">
               <form>
