--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -33,28 +33,28 @@
                 <div class="condition">Humidity</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon1 sub-condition-icon"></div>
-                  <div id="sub-condition-value1" class="sub-condition-value">50 %</div>
+                  <div id="sub-condition-value1" class="sub-condition-value"></div>
                 </div>
               </div>
               <div class="top-right-tile">
                 <div class="condition">Chance of Rain</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon2 sub-condition-icon"></div>
-                  <div id="sub-condition-value2" class="sub-condition-value">28 %</div>
+                  <div id="sub-condition-value2" class="sub-condition-value"></div>
                 </div>
               </div>
               <div class="bottom-left-tile">
                 <div class="condition">Wind Speed</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon3 sub-condition-icon"></div>
-                  <div id="sub-condition-value3" class="sub-condition-value">20 km/h</div>
+                  <div id="sub-condition-value3" class="sub-condition-value"></div>
                 </div>
               </div>
               <div class="bottom-left-tile">
                 <div class="condition">Air Pressure</div>
                 <div class="sub-condition">
                   <div class="sub-condition-icon4 sub-condition-icon"></div>
-                  <div id="sub-condition-value4" class="sub-condition-value">500 PS</div>
+                  <div id="sub-condition-value4" class="sub-condition-value"></div>
                 </div>
               </div>
             </div>
