--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -61,8 +61,8 @@
           </div>
           <div class="days-display">
             <a href="#" class="days-display-left-arrow"></a>
-            <div class="days-display-previous-day">Saturday</div>
-            <div class="days-display-next-day">Monday</div>
+            <div class="days-display-previous-day"></div>
+            <div class="days-display-next-day"></div>
             <a href="#" class="days-display-right-arrow"></a>
           </div>
           <div class="hours-display">
