--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,7 +18,7 @@
           <div class="top-main-display">
             <div class="top-left-display">
               <div class="top-left-display-icon"></div>
-              <div class="top-left-display-weather"></div>
+              <div class="top-left-display-date"></div>
               <div class="top-left-display-city"></div>
               <div class="top-left-display-temp"></div>
             </div>
