--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -72,44 +72,44 @@
             </div>
             <div class="hourly-tiles">
               <div class="hourly-tile">
-                <div class="hour">1 A.M.</div>
-                <div class="hourly-tile-temp">28 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">2 A.M.</div>
-                <div class="hourly-tile-temp">28 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">3 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">4 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">5 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">6 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">7 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
               <div class="hourly-tile">
-                <div class="hour">8 A.M.</div>
-                <div class="hourly-tile-temp">28.5 °C</div>
-                <div class="hourly-tile-feels-like">Feels Like 30°C</div>
+                <div class="hour"></div>
+                <div class="hourly-tile-temp"></div>
+                <div class="hourly-tile-feels-like"></div>
               </div>
             </div>
           </div>
